memeenvy-admin-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meme-admin-ingress
  namespace: memeenvy
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: admin.memeenvy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminserver-service
                port:
                  number: 5513
